--- a/owl-env/Dockerfile
+++ b/owl-env/Dockerfile
@@ -21,7 +21,7 @@ RUN mv opam-2.0.2-x86_64-linux /usr/local/bin/opam
 
 RUN chmod +x /usr/local/bin/opam
 
-USER caente
+USER ${USERNAME}
 
 RUN opam init -y --disable-sandboxing 
 RUN opam update 
@@ -31,27 +31,27 @@ RUN opam install -y oasis dune ocaml-compiler-libs ctypes utop plplot base stdio
 
 #################### SET UP ENV VARS #######################
 
-ENV PATH /home/caente/.opam/4.06.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
-ENV CAML_LD_LIBRARY_PATH /home/caente/.opam/4.06.0/lib/stublibs
-ENV LD_LIBRARY_PATH /usr/lib/:/usr/local/lib:/home/caente/.opam/4.06.0/lib/:/home/caente/.opam/4.06.0/lib/stublibs/:/usr/lib/x86_64-linux-gnu/:/opt/OpenBLAS/lib
+ENV PATH $HOME/.opam/4.06.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
+ENV CAML_LD_LIBRARY_PATH $HOME/.opam/4.06.0/lib/stublibs
+ENV LD_LIBRARY_PATH /usr/lib/:/usr/local/lib:$HOME/.opam/4.06.0/lib/:$HOME/.opam/4.06.0/lib/stublibs/:/usr/lib/x86_64-linux-gnu/:/opt/OpenBLAS/lib
 
 
 #################### INSTALL OPENBLAS ######################
 
-ENV OPENBLASPATH /home/caente/OpenBLAS
-RUN cd /home/caente && git clone https://github.com/xianyi/OpenBLAS.git
+ENV OPENBLASPATH $HOME/OpenBLAS
+RUN cd $HOME && git clone https://github.com/xianyi/OpenBLAS.git
 WORKDIR $OPENBLASPATH 
 RUN make 
 USER root
 RUN make install 
-USER caente
+USER ${USERNAME}
 RUN make clean
-WORKDIR /home/caente
+WORKDIR $HOME
 
 ################# INSTALL EIGEN LIBRARY ####################
 
-ENV EIGENPATH /home/caente/eigen
-RUN cd /home/caente/ && git clone https://github.com/owlbarn/eigen.git
+ENV EIGENPATH $HOME/eigen
+RUN cd $HOME/ && git clone https://github.com/owlbarn/eigen.git
 
 RUN sed -i -- 's/-Wno-extern-c-compat -Wno-c++11-long-long -Wno-invalid-partial-specialization/-Wno-ignored-attributes/g' $EIGENPATH/lib/Makefile \
     && sed -i -- 's/-flto/ /g' $EIGENPATH/lib/Makefile \
@@ -62,26 +62,26 @@ RUN make oasis && make
 USER root
 RUN make install 
 RUN cp $EIGENPATH/_build/include/libeigen.a /usr/local/lib/
-USER caente
-WORKDIR /home/caente
+USER ${USERNAME}
+WORKDIR $HOME
 
 ####################   INSTALL OWL  #######################
 
-ENV OWLPATH /home/caente/owl
-RUN cd /home/caente && git clone https://github.com/owlbarn/owl.git
+ENV OWLPATH $HOME/owl
+RUN cd $HOME && git clone https://github.com/owlbarn/owl.git
 RUN sed -i -- 's/\"-llapacke\" :: ls/ls/g' $OWLPATH/src/owl/config/configure.ml  # FIXME: hacking
 WORKDIR $OWLPATH 
 RUN make 
 USER root
 RUN make install
-USER caente
-WORKDIR /home/caente
+USER ${USERNAME}
+WORKDIR $HOME
 
 ############## SET UP DEFAULT CONTAINER VARS ##############
 
-RUN echo "#require \"owl-top\";; open Owl;;" >> /home/caente/.ocamlinit \
-    && bash -c 'echo -e "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH" >> /home/caente/.profile' \
-    && opam config env >> /home/caente/.bashrc \
-    && bash -c "source /home/caente/.bashrc" 
+RUN echo "#require \"owl-top\";; open Owl;;" >> $HOME/.ocamlinit \
+    && bash -c 'echo -e "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH" >> $HOME/.profile' \
+    && opam config env >> $HOME/.bashrc \
+    && bash -c "source $HOME/.bashrc" 
 
 
