--- a/basic-env/Dockerfile
+++ b/basic-env/Dockerfile
@@ -3,11 +3,15 @@ FROM ubuntu:16.04
 # Locales
 ENV LANGUAGE=en_US.UTF-8
 ENV LANG=en_US.UTF-8
+ENV USERNAME=caente
+ENV HOME=/home/$USERNAME
+RUN useradd -ms /bin/zsh $USERNAME
+
 RUN apt-get update && apt-get install -y locales && locale-gen en_US.UTF-8
 
 # Colors and italics for tmux
-COPY xterm-256color-italic.terminfo /root
-RUN tic /root/xterm-256color-italic.terminfo
+COPY xterm-256color-italic.terminfo $HOME
+RUN tic $HOME/xterm-256color-italic.terminfo
 ENV TERM=xterm-256color-italic
 
 # Common packages
@@ -15,34 +19,14 @@ RUN apt-get update && apt-get install -y \
       build-essential \
       curl \
       git  \
-      iputils-ping \
-      jq \
       libncurses5-dev \
       libevent-dev \
-      net-tools \
-      netcat-openbsd \
-      rubygems \
-      ruby-dev \
       silversearcher-ag \
-      socat \
-      software-properties-common \
-      tmux \
       tzdata \
       wget \
       zsh \
       xclip \
       w3m
-
-RUN chsh -s /usr/bin/zsh
-
-# Install docker
-RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D &&\
-      echo "deb https://apt.dockerproject.org/repo ubuntu-xenial main" > /etc/apt/sources.list.d/docker.list &&\
-      apt-get install -y apt-transport-https &&\
-      apt-get update &&\
-      apt-get install -y docker-engine
-RUN  curl -o /usr/local/bin/docker-compose -L "https://github.com/docker/compose/releases/download/1.13.0/docker-compose-$(uname -s)-$(uname -m)" &&\
-     chmod +x /usr/local/bin/docker-compose
 
 # Install tmux
 WORKDIR /usr/local/src
@@ -63,12 +47,13 @@ RUN apt-get install -y \
       libtool \
       libtool-bin \
       pkg-config \
+      python \
+      python-pip \
       python3 \
       python3-pip \
       unzip \
       gettext
-RUN pip3 install --upgrade pip &&\ 
-    python3 -m pip install --user neovim jedi mistune psutil setproctitle
+
 WORKDIR /usr/local/src
 RUN git clone --depth 1 https://github.com/neovim/neovim.git
 WORKDIR /usr/local/src/neovim
@@ -78,13 +63,14 @@ RUN make CMAKE_BUILD_TYPE=Release
 RUN make install
 RUN rm -rf /usr/local/src/neovim
 
-ENV USERNAME=caente
-
-RUN useradd -ms /bin/zsh $USERNAME
-
 USER $USERNAME
 
-ENV HOME=/home/$USERNAME
+RUN pip3 install --upgrade pip &&\ 
+    python3 -m pip install --user neovim jedi mistune psutil setproctitle
+
+RUN pip install --upgrade pip &&\ 
+    python3 -m pip install --user neovim jedi mistune psutil setproctitle
+
 WORKDIR $HOME
 
 # zsh config
