--- a/basic-env/configs/tmux/tmux.conf
+++ b/basic-env/configs/tmux/tmux.conf
@@ -47,9 +47,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe "xclip -sel clip -i"
 bind-key ] run-shell "xclip -sel clip -o | tmux load-buffer - ; tmux paste-buffer"
 
@@ -72,3 +69,7 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 
 set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
+set -g @resurrect-dir '$HOME/.tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
